# thermify

./: .gitignore  README.md  env.local.json  pyproject.toml  samconfig.toml  template.yaml
docs/: architecture.md  cozify-configuration.md  lambda-environment-parameters.md  layered-architecture-diagram.md  technical-description.md  usage.md
layers/thermia-python/: README.md  requirements.txt
requirements/: base.txt  dev.txt  layer-thermia.txt
scripts/: bootstrap_cozify.py  tune_temperature_control.py
src/: handler_ingestor.py  handler_optimizer.py
src/adapters/: __init__.py  cozify_client.py  electricity_price_client.py  parameter_store.py  s3_client.py  thermia_client.py
src/application/: electricity_price_service.py  errors.py  heating_control_service.py
src/config/: cozify_config.py  settings.py
src/domain/: __init__.py  datetime_utils.py  how_much_to_heat.py  interfaces.py  types.py  when_to_heat.py
tests/unit/: test_bootstrap_cozify.py  test_cozify_client.py  test_datetime_utils.py  test_handler.py  test_heating_control_service.py  test_parameter_store.py  test_s3_client.py  test_temperature_control.py  test_thermia_client.py  test_when_to_heat.py  test_when_to_heat_logging.py
