[project]
name = "thermia-heating-control"
version = "0.1.0"
description = "AWS SAM Lambda to control Thermia heating"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Project Contributors" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: marks tests that require real AWS and Thermia resources"
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S106", "S311"]
